[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/flip.gd" type="Script" id=1]
[ext_resource path="res://scenes/Flip/Scenario.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/Animations/SpriteEnemyHit/lvl4/000.png" type="Texture" id=3]
[ext_resource path="res://sprites/Animations/SpriteEnemyHit/lvl4/001.png" type="Texture" id=4]
[ext_resource path="res://sprites/Animations/SpriteEnemyHit/lvl4/002.png" type="Texture" id=5]
[ext_resource path="res://sprites/Animations/SpriteEnemyHit/lvl4/003.png" type="Texture" id=6]
[ext_resource path="res://sprites/Animations/SpriteEnemyHit/lvl4/004.png" type="Texture" id=7]
[ext_resource path="res://sprites/Animations/SpriteEnemyHit/lvl4/005.png" type="Texture" id=8]
[ext_resource path="res://sprites/Animations/SpriteEnemyHit/lvl4/006.png" type="Texture" id=9]
[ext_resource path="res://sprites/Animations/SpriteEnemyHit/lvl4/007.png" type="Texture" id=10]
[ext_resource path="res://sprites/Animations/SpriteEnemyHit/lvl4/008.png" type="Texture" id=11]
[ext_resource path="res://sprites/Animations/SpriteEnemyHit/lvl4/009.png" type="Texture" id=12]
[ext_resource path="res://sprites/Animations/SpriteEnemyHit/lvl4none/000.png" type="Texture" id=13]
[ext_resource path="res://scenes/Flip/Player.tscn" type="PackedScene" id=14]
[ext_resource path="res://Font.tres" type="DynamicFont" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "reward",
"speed": 12.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "no_reward",
"speed": 1.3
} ]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.592157, 0.352941, 0.592157, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.545098, 0, 0.329412, 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Scenario" parent="." instance=ExtResource( 2 )]

[node name="LeftPoke" type="AnimatedSprite" parent="."]
position = Vector2( 628.921, 857.04 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "empty"

[node name="RightPoke" type="AnimatedSprite" parent="."]
position = Vector2( 1494.02, 871.683 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "empty"

[node name="Player" parent="." instance=ExtResource( 14 )]
position = Vector2( 960, 900 )

[node name="Feedback" type="RichTextLabel" parent="."]
margin_left = 842.053
margin_top = 541.579
margin_right = 1205.05
margin_bottom = 837.579
custom_fonts/normal_font = ExtResource( 15 )

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 833.0
margin_top = -18.903
margin_right = 1196.0
margin_bottom = 277.097
custom_fonts/normal_font = ExtResource( 15 )
text = "1000"

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 353.0
margin_top = 30.0
margin_right = 1618.0
margin_bottom = 106.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 1000.0
step = 6.0
value = 1000.0
percent_visible = false
[connection signal="animation_finished" from="LeftPoke" to="." method="_on_LeftPoke_animation_finished"]
[connection signal="animation_finished" from="RightPoke" to="." method="_on_RightPoke_animation_finished"]
